--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^2.0.5",
-    "firebase": "^4.10.1",
-    "firebase-auth": "^0.1.2",
-    "nuxt": "^1.3.0",
-    "vuetify": "^1.5.14",
-    "vuexfire": "^2.3.0"
+    "@nuxtjs/pwa": "2.0.5",
+    "firebase": "4.10.1",
+    "firebase-auth": "0.1.2",
+    "nuxt": "1.3.0",
+    "vuetify": "1.5.14",
+    "vuexfire": "2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
