--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@nuxtjs/pwa": "2.0.5",
     "nuxt": "1.3.0",
-    "vuetify": "1.5.14"
+    "vuetify": "1.5.14",
+    "netlify-identity-widget": "1.5.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
