updated fields to boolean

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - {label: "Price", name: "price", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Image 2", name: "image2", widget: "image"}
-      - {label: "Image 3", name: "image3", widget: "image", required: "false"}
-      - {label: "Image 4", name: "image4", widget: "image", required: "false"}
-      - {label: "Image 5", name: "image5", widget: "image", required: "false"}
+      - {label: "Image 3", name: "image3", widget: "image", required: false}
+      - {label: "Image 4", name: "image4", widget: "image", required: false}
+      - {label: "Image 5", name: "image5", widget: "image", required: false}
       - {label: "Details", name: "body", widget: "markdown"}
